--- a/Proyecto_Final/AppCoder/templates/AppCoder/facultadFormulario.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/facultadFormulario.html
@@ -5,7 +5,7 @@
 
 {% block ContenidoQueCambia %}
 
-
+<h1 style="color: cornflowerblue;">Formulario de Factultad</h1>
 <form action="/AppCoder/facultadFormulario" method = "POST">{% csrf_token %}
 
     <table>
