--- a/Proyecto_Final/AppCoder/templates/AppCoder/inicio.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/inicio.html
@@ -5,7 +5,7 @@
 
 {% block ContenidoQueCambia %}
 
-<h1>Este es un página que contiene las siguientes clases:</h1>
+<h1>Este es una página que contiene las siguientes clases:</h1>
 <h2 style="color: blue;">Autos</h2>
 <h2 style="color:brown">Inmuebles</h2>
 <h2 style="color: cornflowerblue;">Factultad</h2>
