--- a/Proyecto_Final/AppCoder/templates/AppCoder/inmuebleFormulario.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/inmuebleFormulario.html
@@ -5,7 +5,7 @@
 
 {% block ContenidoQueCambia %}
 
-
+<h1 style="color:brown">Formulario de Inmuebles</h1>
 <form action="/AppCoder/inmuebleFormulario" method = "POST">{% csrf_token %}
 
     <table>
