--- a/Proyecto_Final/AppCoder/templates/AppCoder/autoFormulario.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/autoFormulario.html
@@ -5,7 +5,7 @@
 
 {% block ContenidoQueCambia %}
 
-
+<h1 style="color: blue;">Formulario de Autos</h1>
 <form action="/AppCoder/autoFormulario" method = "POST">{% csrf_token %}
 
     <table>
