--- a/Proyecto_Final/AppCoder/templates/AppCoder/inicio.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/inicio.html
@@ -5,10 +5,31 @@
 
 {% block ContenidoQueCambia %}
 
+   <!-- Masthead-->
+   <header class="masthead">
+    <div class="container position-relative">
+        <div class="row justify-content-center">
+            <div class="col-xl-6">
+                <div class="text-center text-white">
+                    <!-- Page heading-->
+                    <h1 class="mb-5">Proyecto Final CoderHouse - Grupo 4</h1>
+                    <!-- Signup form-->
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- * * SB Forms Contact Form * *-->
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- This form is pre-integrated with SB Forms.-->
+                    <!-- To make this form functional, sign up at-->
+                    <!-- https://startbootstrap.com/solution/contact-forms-->
+                    <!-- to get an API token!-->
+</header>
+
+
+
 <h1>Este es una página que contiene las siguientes clases:</h1>
-<h2 style="color: blue;">Autos</h2>
+<h2 style="color: blue;">Vacunas</h2>
 <h2 style="color:brown">Inmuebles</h2>
 <h2 style="color: cornflowerblue;">Factultad</h2>
+
 
 
 {% endblock %}
