--- a/Proyecto_Final/AppCoder/templates/AppCoder/register.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/register.html
@@ -5,15 +5,15 @@
 
 {% block ContenidoQueCambia %}
 
-
- <!-- Masthead-->
- <header class="masthead">
+   <!-- Masthead-->
+   <header class="masthead">
     <div class="container position-relative">
         <div class="row justify-content-center">
             <div class="col-xl-6">
                 <div class="text-center text-white">
                     <!-- Page heading-->
-                    <h1 class="mb-5">Proyecto Final CoderHouse - Grupo 4</h1>
+                    <h1 class="mb-5">Vacunas</h1>
+                    <h2 class="mb-5">Descripción, tipos y más</h2>
                     <!-- Signup form-->
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
@@ -24,8 +24,22 @@
                     <!-- to get an API token!-->
 </header>
 
-<h1>Este es la página con la clase:</h1>
-<h1 style="color: brown;">Inmuebles</h1>
-<a class="btn btn-primary" href="{% url 'inmuebleFormulario' %}">Ingresar Datos - Formulario</a>
+
+<title>LOGIN</title>
+</head>
+<body>
+    <form ation="" method="POST">
+
+        {% csrf_token %}
+
+        {{ form.as_p }}
+
+        <input type="submit", value="Registrar">
+
+    </form>
+    
+</body>
 
 {% endblock %}
+
+
