--- a/Proyecto_Final/AppCoder/templates/AppCoder/padre.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/padre.html
@@ -25,9 +25,10 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'acercademi' %}">Acerca de mi</a>   
                 <a class="navbar-brand" href="{% url 'vacunas' %}">Vacunas</a>
-                <a class="navbar-brand" href="{% url 'inmuebles' %}">Inmuebles</a>
-                <a class="navbar-brand" href="{% url 'facultad' %}">Factultad</a>              
+                <a class="navbar-brand" href="{% url 'barbijos' %}">Barbijos</a>
+                <a class="navbar-brand" href="{% url 'oximetros' %}">Oximetros</a>              
                 
                 {% if user.is_authenticated %}
                 <a><strong>Usuario Logeado:</strong>  {{ user.get_username }}</a>
