--- a/Proyecto_Final/AppCoder/templates/AppCoder/padre.html
+++ b/Proyecto_Final/AppCoder/templates/AppCoder/padre.html
@@ -38,7 +38,7 @@
                 <a class="btn btn-primary" href="{% url 'Register' %}">Registrate</a>
                 {% endif %} 
                 
-            
+                <a><strong>Fecha:</strong> {% now "d - m - Y" %}</a>
                 <!----
                 <a class="btn btn-primary" href="#signup">Sign Up</a>
                 -->
